# Biz-Assistant

./: .gitignore  README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: health.py
backend/app/core/: settings.py
frontend/: index.html  streamlit_app.py
frontend/static/js/: app.js
